--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,86 @@
 <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Tutosphere</title>
-  <base href="/">
+<html>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<head>
+  <base href="/">
+  <meta charset="utf-8" />
+  <link rel="icon" type="type/png" href="assets/favicon.png">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta name="googlebot" content="noindex">
+  <meta name="robots" content="index, follow, archive, home">
+  <meta name="keywords" content="Delisa, 
+  Geschenke, Selbstgemachtes, Selbstgemachte, Gestecke, Weihnachten, Geburt Spezialitäten, Gesägtes aus Holz, Gesägtes, Spezialitäten, beliebte, suchen, Holz
+  Hausgemacht, Produkte, ">
+  <title>Delisa selbstgemachte Geschenke</title>
+  <meta name="description=" content="Selbstgemachte Geschenke und Gestecke, Spezielles für die Geburt und Gesägtes aus Holz">
+  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, shop-scalable=0' name='viewport' />
+  <meta name="google-site-verification" content="wyBDLnBFm77jMFdezusKtbszl9G5VyGv26hSphhuR5E" />
+  <meta name="viewport" content="width=device-width" />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125337593-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-125337593-1');
+
+  </script>
+
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-8180130997325131",
+      enable_page_level_ads: true
+    });
+
+  </script>
+  <!-- Google Tag Manager -->
+  <script>
+    (function (w, d, s, l, i) {
+      w[l] = w[l] || [];
+      w[l].push({
+        'gtm.start': new Date().getTime(),
+        event: 'gtm.js'
+      });
+      var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s),
+        dl = l != 'dataLayer' ? '&l=' + l : '';
+      j.async = true;
+      j.src =
+        'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+      f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-TFTCMKS');
+
+  </script>
+  <!-- End Google Tag Manager -->
+  <!-- Bootstrap core CSS     -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
+    crossorigin="anonymous">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
+    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="styles.bbe53a9f4d44cf978db2.css">
 </head>
+
 <body>
   <app-root></app-root>
+  <script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script>
+  <script type="text/javascript" src="polyfills.2f4a59095805af02bd79.js"></script>
+  <script type="text/javascript" src="main.2b514c1c289d43dc4bc3.js"></script>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TFTCMKS" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 </body>
+
 </html>
